Refer to JVM startup options (resolves #205)